Fix icon colors on dark mode

--- a/src/client/components/IconButton/IconButton.scss
+++ b/src/client/components/IconButton/IconButton.scss
@@ -28,6 +28,10 @@
 }
 
 #app[data-theme='dark'], .modal-dialog[data-theme='dark'] {
+    .iconButton svg {
+        color: $secondary;
+    }
+
     .iconButton.enabled:hover {
         background-color: mix($dark-background, $dark-washed, 20%);
     }
